<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="475dp"
    android:layout_centerInParent="true"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="10dp">

    <ImageView
        android:id="@+id/closebutton"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="end"
        android:gravity="center"
        android:src="@drawable/cancel"
        android:textColor="#000000"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="30dp"
        android:paddingBottom="10dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp">

        <ImageView
            android:id="@+id/userImageView"
            android:layout_width="60dp"
            android:layout_height="65dp"
            android:contentDescription="@string/noUserLoggedInImageDesc"
            android:scaleType="centerCrop"
            android:src="@drawable/user" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="15dp"
            android:paddingTop="10dp"
            android:paddingEnd="15dp">

            <TextView
                android:id="@+id/userNameView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contextClickable="false"
                android:text="@string/noUserLoggedIn"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/userEmailView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contextClickable="false" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingTop="20dp"
        android:paddingEnd="10dp">

        <Button
            android:id="@+id/settingsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/setting"
            android:drawablePadding="10dp"
            android:gravity="start"
            android:padding="10dp"
            android:text="@string/settings"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/howToUseButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/how_to_use"
            android:drawablePadding="10dp"
            android:gravity="start"
            android:padding="10dp"
            android:text="@string/howToUse"
            android:textColor="@android:color/black" />

        <Button

            android:id="@+id/aboutButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/info"
            android:drawablePadding="10dp"
            android:gravity="start"
            android:padding="10dp"
            android:text="@string/about"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/logoutButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/logout"
            android:drawablePadding="10dp"
            android:gravity="start"
            android:padding="10dp"
            android:text="@string/logout"
            android:textColor="@android:color/black" />
    </LinearLayout>
</LinearLayout>